feat:上一版看看有沒有問題

--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -5,6 +5,8 @@
 
 @import './style/base';
 @import './style/home';
-@import './style/button'
+@import './style/button';
+@import './style/loading';
+@import './style/custom-modal'
 
 
