--- a/src/assets/style/_home.scss
+++ b/src/assets/style/_home.scss
@@ -5,19 +5,20 @@
     padding: 30px 10px;
     overflow: hidden;
     max-width: 1200px; 
-    height: 800px;
+    height: 850px;
 
     th{
-        background-color: #050505f6;
+        background-color: #141414ce;
         color: $white;
         padding: 20px 20px;
-        border-bottom:1px solid #ffffff4f;
+        border-bottom:1px solid #000000ec;
+        backdrop-filter: blur(20px);
     }
     td{
         padding: 20px 20px;
         background-color:transparent;
         color: $white;
-        border-bottom:1px solid #ffffff4f;
+        border-bottom:1px solid #000000ec;
     }
 
 
@@ -27,7 +28,7 @@
         transition: border-bottom 0.5s ease;
     }
     .btn-border:hover{
-        border-bottom: 3px solid #214b8bf6;
+        border-bottom: 3px solid #5c5c5cf6;
         border-radius: 0;
     }
 
@@ -60,7 +61,7 @@
 
     .view-section {
         width: 50%;
-        padding: 2rem;
+        padding: 1.4rem 2rem;
         flex-shrink: 0;
     }
 
@@ -72,7 +73,7 @@
     .table-responsive, 
     .view-section {
         scrollbar-width: thin; 
-        scrollbar-color: rgba(50, 84, 116, 0.534) transparent; 
+        scrollbar-color: rgba(70, 70, 70, 0.74) transparent; 
     }
 
 
