--- a/src/assets/style/_button.scss
+++ b/src/assets/style/_button.scss
@@ -195,10 +195,8 @@
     border: 2px solid #c0ff1481;;
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
     &:hover{
-        // box-shadow: 0px 15px 18px rgba(70, 199, 167, 0.534);
         border-color: #c0ff14; 
-        box-shadow: 0 0 25px rgba(231, 255, 20, 0.527), 
-                    0 20px 40px rgba(0, 0, 0, 0.6);
+        box-shadow: 0 0 25px rgba(231, 255, 20, 0.527), 0 20px 40px rgba(0, 0, 0, 0.6);
     }
 }
 
