--- a/src/assets/style/_home.scss
+++ b/src/assets/style/_home.scss
@@ -6,6 +6,13 @@
     overflow: hidden;
     max-width: 1200px; 
 
+    tr{
+        transition: 0.2s ease;
+        &:hover{
+            background-color: #c0c4ca34;
+        }
+    }
+
     th{
         background-color: #141414ce;
         color: $white;
@@ -20,6 +27,8 @@
         border-bottom:1px solid #000000ec;
     }
 
+    
+
 
     .btn-border{
         border-bottom: 3px solid transparent;
@@ -32,9 +41,6 @@
     }
 
     
-
-
-
     .photo-area {
         width: 100%;
         height: 470px; 
@@ -50,6 +56,19 @@
                 height: 400px;
             }
         }
+        .photo-upload{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: transparent;
+            transition: background-color 0.3s ease; 
+            &:hover{
+                background-color: rgba(73, 73, 73, 0.363);
+            }
+        }
+
     }
 
 
